# opensanctions

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-config.yml  .yamlfmt  .yamllint  CLAUDE.md  CNAME  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  SECURITY.md  _config.yml  add_measures_territories.py  clean_metadata_fields.py  docker-compose.dev.yml  docker-compose.yml  envfile.env  faq.md  index.html  index.md  init-test-db.sql  issuers 20260217-16204.yaml  merge_aliases.py  programs 20260217-161920.yaml  programs_aliases 20260217-162026.yaml  programs_measures 20260217-162016.yaml  requirements.txt  run.sh  schema.sql  schema_questions.md  setup.py  (+4 more)
contrib/prompt_tuning/: README.md  pyproject.toml
contrib/prompt_tuning/names/: compare.py  optimise.py  test_optimise.py  test_tune.py  tune.py
contrib/statement_diff/: README.md  pyproject.toml
contrib/statement_diff/statement_diff/: __init__.py
contrib/statement_diff/tests/: test_statements.py
zavod/: .coveragerc  .gitignore  .pytest.ini  LICENSE  MANIFEST.in  Makefile  README.md  install-zavod.sh  mkdocs.yml  pyproject.toml  setup.py
zavod/docs/: concepts.md  context.md  data_reviews.md  enforcements.md  eu_journal_sanctions.md  helpers.md  index.md  install.md  measures_taxonomy.md  merge_checklist.md  metadata.md  patterns.md  peps.md  priorities.md  programs.md  reference.md  tutorial.md  usage.md  wikidata.md
zavod/docs/best_practices/: addresses.md  caching.md  datapatch_lookups.md  dates_meta.md  entity_id.md  http_operations.md  merge_checklist.md  name_titles.md  patterns.md  priorities.md  provenance.md  release.md  strict_interpretation.md  xpath_and_html.md
zavod/docs/extract/: enforcements.md  names.md
zavod/docs/stylesheets/: extra.css
zavod/migrations/: 2025-09-01-large-values.sql  2025-09-19-checksum-and-version.sql  2025-09-19-crawler-version.sql  2025-09-19-reviews-columns.sql  2025-12-02-review-entity-table.sql  2025-12-10-nullable-origin.sql  2025-12-10-review-origin-required.sql
zavod/zavod/: __init__.py  archive.py  audit.py  cli.py  constants.py  context.py  crawl.py  db.py  debug_cli.py  dedupe.py  entity.py  exc.py  http.py  logs.py  publish.py  reset.py  runs.py  sentry.py  settings.py  stmt_cli.py  store.py  tune.py  util.py  verify.py  wd_up.py  wd_up.tcss
zavod/zavod/archive/: __init__.py  backend.py  cdn.py
zavod/zavod/cli/: __init__.py  archive.py  dedupe.py  etl.py  util.py  wd_up.py
zavod/zavod/enrich/: __init__.py  permid.py
zavod/zavod/export/: __init__.py  ftm.py  metadata.py  names.py  nested.py  senzing.py  simplecsv.py  statistics.py
zavod/zavod/exporters/: __init__.py  common.py  consolidate.py  delta.py  fragment.py  ftm.py  maritime.py  metadata.py  names.py  nested.py  peps.py  securities.py  senzing.py  simplecsv.py  simplecsv_02.py  statements.py  statistics.py  util.py
zavod/zavod/exporters/metadata/: __init__.py  model.py
zavod/zavod/extract/: llm.py  zyte_api.py
zavod/zavod/extract/names/: clean.py
zavod/zavod/helpers/: __init__.py  addresses.py  articles.py  change.py  crypto.py  dates.py  excel.py  html.py  identification.py  llm.py  names.py  numbers.py  pdf.py  positions.py  sanctions.py  securities.py  text.py  vessels.py  wikidata.py  xml.py
zavod/zavod/integration/: __init__.py  dedupe.py  duckdb_index.py  edges.py  logic.py  relations.py  tokenizer.py
zavod/zavod/logic/: pep.py
zavod/zavod/meta/: __init__.py  assertion.py  catalog.py  data.py  dataset.py  dates.py  http.py  model.py  names.py  numbers.py  resource.py
zavod/zavod/parse/: __init__.py  addresses.py  dates.py  excel.py  identification.py  positions.py  sanctions.py  text.py  xml.py
zavod/zavod/runner/: README.md  __init__.py  core.py  enrich.py  local_enrich.py  local_enricher.py  util.py
zavod/zavod/runtime/: cache.py  cleaning.py  delta.py  http_.py  issues.py  loader.py  lookups.py  resources.py  safety.py  sink.py  stats.py  timestamps.py  urls.py  versions.py
zavod/zavod/shed/: __init__.py  annotations.py  bods.py  bs_tokyo_mou_psc.py  duckdb.py  duckdb_index.py  enforcements.py  firds.py  fsf.py  gpt.py  internal_data.py  llm_names.py  parse_rowspan_table.py  playwright.py  reviews.py  trans.py  un_sc.py  zyte_api.py
zavod/zavod/shed/names/: clean.py  split.py
zavod/zavod/shed/wikidata/: CLAUDE.md  client.py  country.py  debug.py  human.py  lang.py  position.py  query.py  struct.py  util.py
zavod/zavod/sinks/: common.py  statement.py
zavod/zavod/stateful/: extraction.py  model.py  positions.py  programs.py  review.py
zavod/zavod/tests/: conftest.py  test_archive.py  test_assertion.py  test_assertions.py  test_cli.py  test_context.py  test_dataset.py  test_dedupe.py  test_enrichment.py  test_entity.py  test_export.py  test_exporters.py  test_logs.py  test_names_spec.py  test_publish.py  test_runs.py  test_store.py  test_tune.py  test_util.py  test_validate.py  test_verify.py
zavod/zavod/tests/enrich/: test_enrichment.py  test_local_enricher.py  test_permid.py  test_runner_util.py  test_util.py
zavod/zavod/tests/exporters/: test_consolidate_dates.py  test_consolidate_edges.py  test_csv.py  test_delta.py  test_exporters.py  test_maritime.py  test_metadata.py  test_nested.py  test_peps.py  test_securities.py  test_senzing.py  test_statistics.py  util.py
zavod/zavod/tests/extract/: test_llm.py  test_names.py  test_zyte_api.py
zavod/zavod/tests/fixtures/: analyzer.yml  book.xls  book.xlsx  book_links.xlsx  book_split_headers.xls  collection.yml  doc.xml  enricher.yml  enrichment_subject.yml  test_pdf.docx
zavod/zavod/tests/helpers/: test_addresses.py  test_change.py  test_cryptos.py  test_dates.py  test_excel.py  test_html.py  (+10 more)
zavod/zavod/tools/: dump_file.py  export_catalog.py  load_db.py  meta_index.py  metadata.py  statements.py  summarise.py  summarise_peps.py  summarize.py  util.py
zavod/zavod/validators/: __init__.py  assertions.py  common.py
zavod/zavod/verifiers/: __init__.py  assertions.py  common.py
(+3135 files in other folders)
