[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zavod"
version = "0.8.0"
description = "Data factory for followthemoney data."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OpenSanctions", email = "info@opensanctions.org" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.11"
dependencies = [
    "followthemoney == 4.2.0",
    "nomenklatura == 4.1.1",
    "plyvel == 1.5.1",
    "rigour == 1.2.8",
    "datapatch >= 1.2.4, < 1.3",
    "certifi",
    "colorama",
    "google-cloud-storage",
    "jinja2",
    "types-jinja2",
    "lxml == 6.0.1",
    "openpyxl == 3.1.5",
    "orjson == 3.11.2",
    "ijson > 3.2, < 4.0",
    "pdfplumber == 0.11.7",
    "prefixdate == 0.5.0",
    "psycopg2-binary",
    "pyicu == 2.15.2",
    "pywikibot==10.4.0",
    "openai >= 1.33.0, < 2.0.0",
    "requests[security]",
    "requests_oauthlib",
    "sqlalchemy[mypy]",
    "structlog",
    "xlrd == 2.0.2",
    "cryptography",
    "duckdb == 1.3.2",
]

[project.urls]
Documentation = "https://github.com/opensanctions/opensanctions/"
Repository = "https://github.com/opensanctions/opensanctions.git"
Issues = "https://github.com/opensanctions/opensanctions/issues"

[project.optional-dependencies]
dev = [
    "black >= 25.1.0",
    "isort >= 6.0.1",
    "wheel >= 0.29.0",
    "twine",
    "build",
    "mypy",
    "flake8 >= 2.6.0",
    "pytest",
    "ruff>=0.4.0,<1.0.0",
    "pytest-cov",
    "lxml-stubs >= 0.5.1",
    "coverage >= 4.1",
    "requests-mock",
    "types-setuptools",
    "types-requests",
    "types-openpyxl",
    "types-google-cloud-ndb",
    "types-redis",
    "types-PyYAML",
    "pre-commit",
]
docs = [
    "pillow",
    "cairosvg",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[project.scripts]
zavod = "zavod.cli:cli"

[tool.hatch.build.targets.sdist]
only-include = ["zavod", "LICENSE", "README.md"]

[tool.distutils.bdist_wheel]
universal = true

[tool.coverage.run]
branch = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
use_parentheses = false
combine_as_imports = true
force_single_line = false
force_alphabetical_sort_within_sections = true
src_paths = ["zavod"]
