[project]
name = "prompt-tuning"
version = "0.1.0"
description = "Offline DSPy tooling for tuning zavod's LLM prompts. Not part of the shipped ETL pipeline."
requires-python = ">=3.12"
# Depends on zavod (the production name cleaning code it evaluates against) and pulls in
# DSPy. DSPy deliberately lives here rather than in zavod: it drags in a lot of extra
# packages and we don't want it as a production/published dependency. The code itself is
# run from the source tree as `contrib.prompt_tuning.*` (see README), so this project only
# needs to contribute dependencies, not ship any modules.
dependencies = [
    "zavod",
    "dspy == 3.1.3",
    "litellm>=1.64.0,<=1.91.1", # required by dspy, pinned following litellm compromise
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
zavod = { workspace = true }

[tool.hatch.build.targets.wheel]
# Dependency-only project: don't try to package any modules.
bypass-selection = true
