[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statement-diff"
version = "0.1.0"
description = "TUI diff tool for zavod statements.pack files."
requires-python = ">= 3.12"
dependencies = [
    "zavod",
    "textual",
]

[project.scripts]
zavod-stmt = "statement_diff:cli"

[tool.uv.sources]
zavod = { path = "../../zavod", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["statement_diff"]
